Add Umami analytics tracking

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <title>ChordBoy - MIDI Chord Controller</title>
+    <script defer src="https://analytics.3218i.com/script.js" data-website-id="7e87d4b0-71c9-4769-b826-d48c1f3192e2"></script>
   </head>
   <body>
     <div id="root"></div>
